# obs-rtsp

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  README.md  obs-rtsp.cpp  rtsp_source.cpp  rtsp_source.h
client/: rtsp_client.cpp  rtsp_client.h
src/: rtsp_output.cpp  rtsp_output.h  rtsp_source.cpp  rtsp_source.h
src/client/: rtsp_client.cpp
src/server/: rtsp_server.cpp  rtsp_server.h
src/utils/: video_utils.h
src/utils/h264/: h264_common.cpp  h264_common.h
src/utils/h265/: h265_common.cpp  h265_common.h
utils/: utils.cpp  utils.h
utils/h264/: h264_common.cpp  h264_common.h
utils/h265/: h265_common.cpp  h265_common.h
